# amf-training-llm-eng

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
lib/: config.py  models.py  prompts.py  utils.py
notebooks/: 1_rag_intro.ipynb  2_1_parsing_strategies.ipynb  2_2_chunking_strategies.ipynb  3_1_query_augmentation_strategies.ipynb  3_2_routing_strategies.ipynb  3_3_retrieval_strategies.ipynb  4_reranking_strategies.ipynb  5_guardrails_strategies.ipynb  6_monitoring_evaluation.ipynb
tests/: test_notebooks.py
